--- a/src/pages/Movies.scss
+++ b/src/pages/Movies.scss
@@ -546,10 +546,14 @@
 	position: relative;
 	width: 138px;
 	height: 198px;
+	aspect-ratio: 138 / 198;
 	flex: 0 0 auto;
 	border-radius: 10px;
 	overflow: hidden;
 	background: #1f2128;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .movies-page .movie-card-image {
